@@ -25,12 +25,10 @@ my %WriteMakefileArgs = (
   "MIN_PERL_VERSION" => "5.006",
   "NAME" => "Dist::Zilla::Plugin::Author::KENTNL::CONTRIBUTING",
   "PREREQ_PM" => {
-    "Carp" => 0,
     "Dist::Zilla::Plugin::GenerateFile::ShareDir" => "0.006",
     "Dist::Zilla::Util::ConfigDumper" => 0,
     "Moose" => 0,
     "Moose::Util::TypeConstraints" => 0,
-    "Path::Tiny" => 0,
     "strict" => 0,
     "warnings" => 0
   },
@@ -47,7 +45,6 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
-  "Carp" => 0,
   "Dist::Zilla::Plugin::GenerateFile::ShareDir" => "0.006",
   "Dist::Zilla::Util::ConfigDumper" => 0,
   "ExtUtils::MakeMaker" => 0,
@@ -55,7 +52,6 @@ my %FallbackPrereqs = (
   "File::Spec" => 0,
   "Moose" => 0,
   "Moose::Util::TypeConstraints" => 0,
-  "Path::Tiny" => 0,
   "Test::More" => "0.89",
   "strict" => 0,
   "warnings" => 0
