@@ -1,6 +1,9 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001005
+ [Removed / runtime requires]
+ - Carp
+ - Path::Tiny
 
 0.001004 2015-07-05T06:07:52Z
  [Changed / runtime requires]
