@@ -1,6 +1,12 @@
 This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL dependencies for all phases (configure/build/runtime/test/develop)
 
 0.001005
+ [Removed / runtime recommends]
+ - Path::Tiny 0.058
+
+ [Removed / runtime requires]
+ - Carp
+ - Path::Tiny
 
 0.001004 2015-07-05T06:07:52Z
  [Changed / develop suggests]
