@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.001005
+ [Removed / runtime recommends]
+ - Path::Tiny 0.058
 
 0.001004 2015-07-05T06:07:52Z
 
