@@ -1,6 +1,9 @@
 Release history for Dist-Zilla-Plugin-Author-KENTNL-CONTRIBUTING
 
 {{$NEXT}}
+ [Dependencies::Stats]
+ - Dependencies changed since 0.001004, see misc/*.deps* for details
+ - runtime: -2 (recommends: -1)
 
 0.001004 2015-07-05T06:07:52Z 0f96d87
  [Dependencies::Stats]
